@@ -8,7 +8,7 @@ IT(info)[BD(:)"Axis label"BD(:)][BD(:=)"prefix"BD(:)][\fB:,\fP"unit label"BD(:)]
 The IT(info) string is made up of one or more concatenated substrings of the form
 [BD(a)|BD(f)|BD(g)][IT(stride)[+-IT(phase)][IT(unit)]].
 The leading BD(a) is used to specify the annotation and major tick spacing [Default], BD(f) for minor tick spacing, and
-BD(g) for gridline spacing (when IT(stride) in omitted, gridline spacing is the same as the annotation spacing).
+BD(g) for gridline spacing.
 IT(stride) is the desired stride interval. 
 The optional IT(phase) shifts the annotation interval by that amount (positive or negative).
 The optional IT(unit) indicates the unit of the IT(stride) and can be any of
@@ -23,11 +23,10 @@ BD(m) and BD(s) instead mean arc minutes and arc seconds.  All entities that are
 by BD(TIME_LANGUAGE).
 .br
 Alternatively, for linear maps, we can omit IT(stride), thus setting IT(xinfo), IT(yinfo), or IT(zinfo) to
-BD(a) automatically determines the annotation interval,
-BD(af) adds suitable minor tick intervals,
-BD(g) plots grid lines with the same interval as if OPT(Ba) was used,
-BD(ag) plots both annotation and grid lines with the same spacing,
-BD(afg) adds suitable minor tick intervals.
+BD(a) plots annotations at automatically determined intervals,
+BD(ag) plots both annotations and grid lines with the same spacing,
+BD(afg) adds suitable minor tick intervals,
+BD(g) plots grid lines with the same interval as if OPT(Bf) was used.
 .br
 For custom annotations and intervals, let IT(xinfo), IT(yinfo), or IT(zinfo) be
 BD(c)IT(intfile), where IT(intfile) contains any number
