@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.1114 2011-06-22 20:39:06 jluis Exp $
+	$Id: ChangeLog,v 1.1115 2011-06-23 02:20:43 remko Exp $
 -----------------------------------------------------------------------------------------
 
 2011-06-22	jluis
@@ -8,6 +8,7 @@
 2011-06-22	remko
 	* gmt_map.c:		Now, for lat/lon plots, when using e.g. -Bag, sets the automatic
 				intervals the same in both directions (unless you use -Bag/ag).
+				Also 'g' follows 'f', unless in consort with 'a', then follows 'a'.
 
 2011-06-21	jluis
 	* gmtinstall.bat:	It now builds also the supplements and put all dlls 
